--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.420.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
+    "nextjs-current-url": "^1.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
