--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.13.1",
     "gsap": "^3.12.5",
     "init": "^0.1.2",
     "lucide-react": "^0.420.0",
     "next": "^14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "nextjs-current-url": "^1.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "shadcn-ui": "^0.8.0",
+    "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
